[package]
name = "corona-stats"
version = "0.1.0"
authors = ["Andreas Resch <andreas@resch.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
